--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"jsdom": "^22.1.0",
 		"puppeteer": "^21.1.0",
 		"puppeteer-extra": "^3.3.6",
-		"puppeteer-extra-plugin-stealth": "^2.11.2"
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
+		"vanilla-colorful": "^0.7.2"
 	}
 }
