--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"jsdom": "^22.1.0",
 		"puppeteer": "^21.1.0",
 		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
 		"utf-8-validate": "^6.0.3",
 		"vanilla-colorful": "^0.7.2"
 	}
