--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sparticuz/chromium-min": "^117.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@vercel/analytics": "^1.1.1",
 		"bufferutil": "^4.0.8",
 		"encoding": "^0.1.13",
 		"jsdom": "^22.1.0",
 		"puppeteer": "^21.1.0",
+		"puppeteer-core": "^21.4.1",
 		"puppeteer-extra": "^3.3.6",
 		"puppeteer-extra-plugin-stealth": "^2.11.2",
 		"utf-8-validate": "^6.0.3",
