--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
+	"engines": {
+		"node": "20.x"
+	},
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.1.1",
